--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 'about.valuesList3': '',
                 'about.valuesList4': '',
                 'about.mission': '私たちの使命',
-                'about.missionText': 'Consulting」の略です。これは、進むべき道を見出せるための架け橋を表しています。弊社事業を通じて、国際教育の発展を促進し、より多くの学生に専門的で質の高い留学サービスを提供し、学生皆さんの未来を切り開く手助けができることを願っています。',
+                'about.missionText': 'B.V.C は「Bridge Vision Consulting」の略です。これは、進むべき道を見出せるための架け橋を表しています。弊社事業を通じて、国際教育の発展を促進し、より多くの学生に専門的で質の高い留学サービスを提供し、学生皆さんの未来を切り開く手助けができることを願っています。',
                 'services.title': 'サービス',
                 'services.webDesign': 'ウェブデザイン',
                 'services.webDesignDesc': 'ユーザーフレンドリーなウェブサイトを設計します。',
@@ -655,4 +655,5 @@
         }
     </script>
 </body>
+
 </html>
